# agent-demo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SUBMISSION.md  install.cmd
docs/: AI_DEVLOG.md  DESIGN.md  PROMPTS.md  demo-script.md
examples/go-agent-demo/: .gitignore  AI_DEVLOG.md  PROMPTS.md  README.md  agent.go  agent_test.go  go.mod  live_test.go  llm.go  main.go  memory.go  runtime.go  tools.go  types.go
src/: agent.rs  commands.rs  config.rs  context.rs  error.rs  lib.rs  llm.rs  main.rs  memory.rs  model.rs  permission.rs  renderer.rs  repl.rs
src/tools/: calculator.rs  edit_file.rs  mod.rs  read_file.rs  search.rs  shell.rs  todo.rs
tests/: agent_loop.rs  cli_product.rs  keyring.rs  live_deepseek.rs  scheduling.rs  tools.rs
